@@ -5,7 +5,6 @@ import se.ifmo.server.db.UserService;
 import se.ifmo.shared.builders.VehicleDirector;
 import se.ifmo.shared.communication.Callback;
 import se.ifmo.shared.communication.Request;
-import se.ifmo.shared.exceptions.InvalidDataException;
 import se.ifmo.shared.model.Vehicle;
 
 import java.util.List;
@@ -26,13 +25,12 @@ public class AddRandom extends Command {
      *
      * @param req {@link Request}
      * @return {@link Callback}
-     * @throws InvalidDataException
      */
     @Override
     public Callback execute(Request req) {
         long uid = UserService.getInstance().getUserID(req.credentials().username());
-        List<Vehicle> carFleet = VehicleDirector.constructAndGetRandomVehicles(Integer.parseInt(req.args().get(0)), uid);
+        List<Vehicle> carFleet = VehicleDirector.constructAndGetRandomVehicles(Integer.parseInt(req.args().getFirst()), uid);
         CollectionManager.getInstance().addAll(carFleet);
-        return new Callback("Successfully added new " + req.args().get(0) + " elements to the collection");
+        return new Callback("Successfully added new " + req.args().getFirst() + " elements to the collection");
     }
 }
